2006-09-03 David Brown <dmlb2000@gmail.com>
	* info/patches/sws2_patches/suspend2-2.2.7-for-2.6.17.patch: added

2006-09-03 Pol Vinogradov <vin.public@gmail.com>
	* info/patches/acpi_dsdt_initrd_patches: added, allows loading custom DSDT
	  from initrd image, made available for 2.6.16 too

2006-09-02 David Brown <dmlb2000@gmail.com>
	* PRE_BUILD: added unset LC_ALL because of some keymap issues see bug
	  #12164

2006-09-02 David Brown <dmlb2000@gmail.com>
	* PRE_BUILD: some spell linting and added sanity check so bug #8192
	  should never happen again

2006-09-01 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to 2.6.18-rc5-mm1
	* info/patches/mm_patches/2.6.18-rc5-mm1: added

2006-09-01 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to 2.6.18-rc4-mm3
	* info/patches/mm_patches/2.6.18-rc4-mm3: added

2006-08-27 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.18-rc5
	* info/patches/PRE_2_6/patch-2.6.18-rc5: added

2006-08-23 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.17.11
	* info/patches/maintenance_patches/patch-2.6.17.11: added

2006-08-22 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.17.10
	* info/patches/maintenance_patches/patch-2.6.17.10: added

2006-08-20 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to 2.6.18-rc4-mm2
	* info/patches/mm_patches/2.6.18-rc4-mm2: added

2006-08-18 David Brown <dmlb2000@gmail.com>
	* PREPARE: make it rm -f the depends makefile so that it doesn't spit
	  out an error if it's not there (bug #9733)
	* BUILD: added building of ifenslave
	* INSTALL: added installing of ifenslave (bug #10685)

2006-08-18 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.17.9
	* info/patches/maintenance_patches/patch-2.6.17.9: added

2006-08-13 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to 2.6.18-rc4-mm1