@@ -1,5 +1,6 @@
 2006-09-03 David Brown <dmlb2000@gmail.com>
 	* info/patches/sws2_patches/suspend2-2.2.7-for-2.6.17.patch: added
+	* info/patches/sws2_patches/suspend2-2.2.7.3-for-2.6.17.patch: added
 
 2006-09-03 Pol Vinogradov <vin.public@gmail.com>
 	* info/patches/acpi_dsdt_initrd_patches: added, allows loading custom DSDT
